# web-backend

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  compose.dev.yaml  entry.py  main.py  pyproject.toml  requirements.txt  settings.py
.github/workflows/: ci.yml
db/: __init__.py  helpers.py  schemas.py
dependencies/: auth.py  state.py
log/: custom_logger.py
logger/: custom_logger.py
models/: schemas.py
routers/: auth.py  models.py  prediction.py
services/: model_service.py  prediction_service.py  user_service.py
tests/: client.py  conftest.py  test_auth.py  test_models.py  test_prediction.py
tests/conf/: auth.py  common.py
