[project]
name = "web-backend"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "sqlalchemy",
    "asyncpg",
    "pyjwt",
    "argon2-cffi",
    "tenacity",
] # TODO: pin versions

[tool.setuptools]
packages = []

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-asyncio", "testcontainers[postgres]"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint]
# Enable the isort rules.
extend-select = ["I"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/test_*.py" = ["F811"]
"tests/**/*_test.py" = ["F811"]

[tool.basedpyright]
reportAny = false
reportExplicitAny = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownLambdaType = false
reportUnusedCallResult = false