[project]
name = "web-backend"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "httpx>=0.28.1",
    "sqlalchemy>=2.0.41",
    "asyncpg>=0.30.0",
    "pyjwt>=2.10.1",
    "argon2-cffi>=25.1.0",
    "tenacity>=9.1.2",
]

[tool.setuptools]
packages = []

[project.optional-dependencies]
dev = [
    "ruff>=0.11.10",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "testcontainers[postgres]>=4.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint]
# Enable the isort rules.
extend-select = ["I"]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/test_*.py" = ["F811"]
"tests/**/*_test.py" = ["F811"]

[tool.basedpyright]
reportAny = false
reportExplicitAny = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownLambdaType = false
reportUnusedCallResult = false
